# ATS

./: .ss  build_latency_only.sh  build_with_cmake.sh  fast_build.sh
Common/: BasicDomainParticipant.h
DataService/src/: ExecutionReportDataReaderListenerImpl.h  OrderMassStatusRequestService.h  main.cpp
DistributedATS/: dats_env.sh
DistributedATS/MiscATS/CryptoCLOB/: crypto_ats.json  matching_ats.json
DistributedATS/MiscATS/CryptoCLOB/logs/: FIX.4.4-DEFAULT-DEFAULT.session  FIX.4.4-FIX_GWY_1-CRYPTO_TRADER_1-CRYPTO_TRADER_1:FIX_GWY_1:1755847893:0.body  FIX.4.4-FIX_GWY_1-CRYPTO_TRADER_1-CRYPTO_TRADER_1:FIX_GWY_1:1755847893:0.header  FIX.4.4-FIX_GWY_1-CRYPTO_TRADER_1-CRYPTO_TRADER_1:FIX_GWY_1:1755847893:0.seqnums  FIX.4.4-FIX_GWY_1-CRYPTO_TRADER_1-CRYPTO_TRADER_1:FIX_GWY_1:1755847893:0.session  FIX.4.4-FIX_GWY_1-CRYPTO_TRADER_1-CRYPTO_TRADER_1:FIX_GWY_1:1755847952:1.body  FIX.4.4-FIX_GWY_1-CRYPTO_TRADER_1-CRYPTO_TRADER_1:FIX_GWY_1:1755847952:1.header  FIX.4.4-FIX_GWY_1-CRYPTO_TRADER_1-CRYPTO_TRADER_1:FIX_GWY_1:1755847952:1.seqnums  FIX.4.4-FIX_GWY_1-CRYPTO_TRADER_1-CRYPTO_TRADER_1:FIX_GWY_1:1755847952:1.session  FIX.4.4-FIX_GWY_1-CRYPTO_TRADER_1-CRYPTO_TRADER_1:FIX_GWY_1:1755853258:2.body  FIX.4.4-FIX_GWY_1-CRYPTO_TRADER_1-CRYPTO_TRADER_1:FIX_GWY_1:1755853258:2.header  FIX.4.4-FIX_GWY_1-CRYPTO_TRADER_1-CRYPTO_TRADER_1:FIX_GWY_1:1755853258:2.seqnums  (+43 more)
DistributedATS/config/: log4cxx.xml
DistributedATS/lib/: libDistributedATSLib.dylib  libboost_program_options.dylib
FIXGateway/src/: ConcurrentQueue.h  DataWriterContainer.hpp  ExecutionReportDataReaderListenerImpl.cpp  ExecutionReportDataReaderListenerImpl.h
LatencyTest/: Application.cpp  Application.h  LatencyTest.cfg  LatencyTest.cpp  LatencyTest.h  start_latency_test.sh  test_new_order.cpp
MatchingEngine/scripts/: matchingengine.sh
MatchingEngine/src/: Market.cpp  MarketDataSnapshotFullRefreshDataReaderListenerImpl.cpp  NewOrderSingleDataReaderListenerImpl.cpp  main.cpp
MiscClients/golang_rest_service/: .env  docker-compose.yml  go.mod  go.sum  rest_to_fix.go
MiscClients/golang_rest_service/components/: fix_adapter.go  investors.go  kafka_service.go  kafka_service_test.go  market_data.go  rest_adapter.go
MiscClients/golang_rest_service/python_client/: README  requirements.txt  test_client.py  test_kafka.py
custom_w_scripts/: dats_env.sh  start_cryptoclob.sh  start_matching_engine_only.sh  tables_info.txt  updated_userbalance.sh
externel/quickfix/lib/: libquickfix.17.0.0.dylib  libquickfix.17.dylib  libquickfix.dylib
test_client/: CMakeLists.txt  build_test.sh  debug_environemnt.sh  discovery_test.cpp  minimal_test.cpp  run_script.sh  test.cpp  test_new_order.cpp
